styles/fields/input.css
input, textarea, select {
  appearance: none;
  width: 100%;
  border: 1px solid var(--stroke-default);
  padding: 0.75rem 1rem;
  font: var(--text);
  border-radius: 0.5rem;
}

label {
  display: block;
  margin-bottom: 0.25rem;
  font: var(--text-sm);
  color: var(--text-secondary);
}

input:focus, textarea:focus, select:focus, input[type="date"]:focus-within {
  outline: 0.25rem solid var(--surface-secondary);
  border: 0.125rem solid var(--stroke-highlight);
  outline-offset: 0.1px;
}

input[type="date"] {

  &::-webkit-calendar-picker-indicator {
    opacity: 0;
  }

  &::before {
    content: "";
    position: absolute;
    background: url(../../assets/icons/calendar-03.svg) center right no-repeat;

    right: 1rem;
    width: 1.25rem;
    height: 1.25rem;

    top: 50%;
    transform: translateY(-50%);
  }
}

select {
  background: url(../../assets/icons/arrow-down-01.svg) center right 1rem/0.75rem no-repeat;
}

.address .flex {
  gap: 1.25rem;
}

.input-wrapper:has([disabled]) {
  opacity: 0.5;

}

input {

    &[disabled] {
      background-color: var(--surface-disabled);

      border: 1px solid var(--stroke-default);

      color: var(--text-primary);
    }

    &:invalid {
      border: 0.125rem solid var(--semantic-error);
    }

    & + small {
      font: var(--text-sm);
      color: #78716C;

      display: inline-block;
      margin-top: 0.25rem;
    }

    &[required] + .error {
      display: flex;
      align-items: center;
      gap: 0.25rem;

      font: var(--text-sm);
      color: var(--semantic-error);

      margin-top: 0.25rem;
    }

    &:not(:focus):valid + .error {
      display: none;
    }
}

